# CMakePractise

./: CMakeLists.txt  main.cpp
SeqLib/: CMakeLists.txt  sequence.cpp  sequence.h
